--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #changing the server port
-server.port=8089
+server.port=9191
 
 #db specific properties
 spring.datasource.url=jdbc:mysql://localhost:3306/CovidVaccination
@@ -8,6 +8,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 #ORM s/w specific properties
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
